welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
	var zero=0
	var un=0
	var deux=0
	var trois=0
	var quatre=0
	for (i<-0 to num.length-1) {
		if (num(i)==0 && num(i+1)!=0) {
			zero=zero+1
		} else if (num(i)==1 && num(i+1)!=1) {
			un=un+1
		} else if (num(i)==2 && num(i+1)!=2) {
			deux=deux+1
		} else if (num(i)==3 && num(i+1)!=3) {
			trois=trois+1
		} else if (num(i)==4 && num(i+1)!=4) {
			quatre=quatre+1
		}
	}
	return (zero-1)+
}
